--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!--About section-->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/img/4erep.png" alt="" />
+        <img src="/img/fightclub.jpg" alt="" />
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
