--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!--About section-->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/img/fightclub.jpg" alt="" />
+        <img src="img/fightclub.jpg" alt="" />
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
@@ -130,7 +130,7 @@
       </div>
       <div class="portfolio-content">
         <div class="row">
-          <img src="/img/portfolio/1.jpg" alt="" />
+          <img src="img/portfolio/1.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/img/portfolio/2.jpg" alt="" />
+          <img src="img/portfolio/2.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/img/portfolio/3.jpg" alt="" />
+          <img src="img/portfolio/3.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/img/portfolio/4.jpg" alt="" />
+          <img src="img/portfolio/4.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/img/portfolio/1.jpg" alt="" />
+          <img src="img/portfolio/1.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
@@ -195,7 +195,7 @@
           </div>
         </div>
         <div class="row">
-          <img src="/img/portfolio/2.jpg" alt="" />
+          <img src="img/portfolio/2.jpg" alt="" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
